<package>
  <name>pose_twist_meskf_ros</name>
  <version>0.0.1</version>
  <description>Extended Kalman filter to estimate robot pose and twist,
     using inertial, depth (pressure) and visual sensors.

     Actually it is an implementation of an error-state Kalman filter (ESKF),
     with multipiclative orientation error model.

     Imu's gyroscope and accelerometer readings are treated as control inputs.
     Visual pose estimates and depth (from pressure) readings are treated as measurements.

     For portability the filter is implemented using the Bayesian Filter Library.</description>
  <author>Joan Pau Beltran</author>
  <maintainer email="pl.negre@uib.cat">Pep Lluis Negre</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/pose_twist_meskf</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>memsense_imu</build_depend>
  <build_depend>auv_sensor_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>orocos-bfl</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>memsense_imu</run_depend>
  <run_depend>auv_sensor_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>orocos-bfl</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>eigen</run_depend>

</package>
